--- a/angular-front-end/src/app/formation-m/details-formation/details-formation.component.css
+++ b/angular-front-end/src/app/formation-m/details-formation/details-formation.component.css
@@ -6,7 +6,7 @@
     background: #FF9166 !important;
 }
 
-.card{
-    width : 50%;
-    margin-top: 1%;
+.card {
+    width: 27.7vw;
+    margin: 4px;
 }
