--- a/angular-front-end/src/app/avis-master/avis-master.component.css
+++ b/angular-front-end/src/app/avis-master/avis-master.component.css
@@ -1,8 +1,5 @@
-.carousel {
+.jumbotron {
     background: #5070B5 !important;
-    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.4); 
-    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.4);
-    
 }
 
 #carousel{
