--- a/angular-front-end/src/app/univ-map/univ-map.component.css
+++ b/angular-front-end/src/app/univ-map/univ-map.component.css
@@ -1,15 +1,15 @@
 .tabMap{
-    width:100%;
-    height:600px;
+    /* width:100%; */
+    height:85vh;
 }
 
 .cellDetUniv{
-    width:100%;
-    height:600px;
+    /* width:100%; */
+    height:85vh;
     overflow:auto;
 }
 
 .cellMap{
-    width:60%;
+    /* width:60%; */
     height:100%;
 }
